Fix header height on mobile

--- a/src/style/viewports.css
+++ b/src/style/viewports.css
@@ -51,6 +51,7 @@
         position: relative;
         gap: 8px;
         align-items: flex-start;
+        height: unset;
 
         img {
           position: relative;
